--- a/Syllabus/soci301_syllabus.tex
+++ b/Syllabus/soci301_syllabus.tex
@@ -113,7 +113,7 @@
   Email: \href{mailto:mjacinto@csuchico.edu}{\nolinkurl{mjacinto@csuchico.edu}}\\
   Preferred contact: Canvas Messaging\\
   Office Hours: 10:00 a.m. - 12:00 p.m. Wed\\
-  Office: TBD\\
+  Office: Zoom\\
   Correspondence policy: Respond within 24-48 hours\\
     \columnbreak
     
@@ -121,7 +121,7 @@
 	
 \noindent \begin{tabular*}{\textwidth}{ @{\extracolsep{\fill}} lr @{\extracolsep{\fill}}}
 \textbf{\underline{Class information}}\\
-  Classroom: Butte Hall 308\\
+  Classroom: Butte Hall 308 / Online\\
   Class Hours: 2:00 p.m. - 3:15 p.m. TuTh\\
     \\
 	\end{tabular*}\\
@@ -140,6 +140,15 @@ the territory of the Mechoopda people. Without them, we would not have
 access to this campus or our education.}
 \end{quote}
 \end{quote}
+
+\hypertarget{course-status}{%
+\section{Course Status}\label{course-status}}
+
+This course is a requirement for the sociology major. It has a
+prerequisite of SOCI 300, Classical Social Theory, though this
+prerequisite may be waived with permission of the instructor. \emph{Note
+that if you take SOCI 301 prior to or concurrent with SOCI 300, you will
+not be able to repeat SOCI 300 for forgiveness.}
 
 \hypertarget{course-description}{%
 \section{Course Description}\label{course-description}}
@@ -230,15 +239,6 @@ Objectives}\label{sociology-program-student-learning-objectives}}
   lives.
 \end{itemize}
 
-\hypertarget{course-status}{%
-\subsection{Course Status}\label{course-status}}
-
-This course is a requirement for the sociology major. It has a
-prerequisite of SOCI 300, Classical Social Theory, though this
-prerequisite may be waived with permission of the instructor. \emph{Note
-that if you take SOCI 301 prior to or concurrent with SOCI 300, you will
-not be able to repeat SOCI 300 for forgiveness.}
-
 \hypertarget{important-dates}{%
 \subsection{Important Dates}\label{important-dates}}
 
@@ -297,7 +297,7 @@ Course}\label{structure-and-character-of-a-chicoflex-course}}
   \textbf{Since this is a
   \href{https://www.csuchico.edu/tlp/chicoflex/faq.shtml\#whatiscoflex}{\emph{ChicoFlex}
   Course}, ALL communications for this course will be conducted via
-  Canvas Learn}. At Chico State, ``this class meets at set days/times
+  Canvas}. At Chico State, ``this class meets at set days/times
   in-person (requiring social distancing and face coverings) and is
   paired with another section taught simultaneously online by the same
   instructor.'' \textbf{All times will use Pacific Standard Time (PST).}
@@ -343,28 +343,26 @@ Course}\label{structure-and-character-of-a-chicoflex-course}}
 \hypertarget{covid_policy}{%
 \section{COVID policy}\label{covid_policy}}
 
+\hypertarget{vaccinations}{%
+\subsection{Vaccinations}\label{vaccinations}}
+
 \href{https://calstate.policystat.com/policy/11030468/latest/}{Per the
 California State University Chancellor's Office policy, the Covid-19
 vaccine and booster is required for students, faculty and staff, unless
-you obtain an exemption from the university}. Currently, Chico State is
-requiring everyone on campus to wear an approved face covering in all
-indoor campus spaces. Accordingly, all students are required to wear an
-appropriate face mask covering the nose and mouth in order to
-participate in this course. Policies and requirements regarding COVID-19
-are subject to change pursuant to campus, local, state and/or federal
-guidelines.
+you obtain an exemption from the university}.
+\textcolor{red}{\bf{CSU Chico is requiring all students who are booster-eligible to certify having received their booster by August 15. Please note that dishonesty relating to the vaccination policy and/or your failure to comply with any other COVID-19 related safety policy or mandate, including the face covering requirement, may result in disciplinary action against you through the office of Student Conduct, Rights and Responsibilities, which can include suspension or expulsion from the California State University system.}}
 
-Please note that dishonesty relating to the vaccination policy and/or
-your failure to comply with any other COVID-19 related safety policy or
-mandate, including the face covering requirement, may result in
-disciplinary action against you through the office of Student Conduct,
-Rights and Responsibilities, which can include suspension or expulsion
-from the California State University system.
+\hypertarget{masks}{%
+\subsection{Masks}\label{masks}}
 
-Individuals unable to wear a face covering due to a medical condition
-should contact the \href{https://www.csuchico.edu/arc/}{Accessibility
-Resource Center} by phone at 530-898-5959 or by email at
-\href{mailto:arcdept@csuchico.edu}{\nolinkurl{arcdept@csuchico.edu}}.
+While masks are not required to attend in-person classrooms, they are
+\emph{strongly recommended} at most indoor locations for the fall 2022
+semester. Masking is one of the most effective ways to protect yourself
+and others, especially indoors. Please continue to respect an
+individual's decision to wear a mask even if it is not required. The
+professor has chosen to wear a mask during lecture and will take the
+necessary steps to provide clearly audible lectures for both in-person
+and online students.
 
 \hypertarget{covid-policy-re-attendance}{%
 \subsubsection{COVID policy re:
@@ -471,10 +469,10 @@ weighed according to the following components:
 \toprule
 \textbf{Item} & \textbf{\% of Final Grade}\\
 \midrule
-Attendance \& Participation & 10 \%\\
-Weekly Perusall Participation \& Discussion & 10 \%\\
-Quizzes & 20 \%\\
-Analytical Response Papers & 60 \%\\
+Analytical Response Papers & 40 \%\\
+Five (5) Quizzes & 30 \%\\
+Weekly Perusall Participation \& Discussion & 15 \%\\
+Attendance \& Participation & 15 \%\\
 TOTAL & 100 \%\\
 \bottomrule
 \end{tabular}
@@ -486,129 +484,9 @@ one hour in class. This time outside of class will be spent on reading,
 assignments, and studying. This means you should plan on devoting six
 hours of outside time per week to this course.
 
-\hypertarget{attendance-and-class-participation-10-of-final-grade}{%
-\subsection{Attendance and Class Participation (10\% of Final
-Grade)}\label{attendance-and-class-participation-10-of-final-grade}}
-
-The format of this course is an interactive, ``live'' hybrid lecture and
-discussion with the objective of collaborative learning and analysis.
-Participation in class discussion is necessary for your development as a
-critical scholar and for your understanding of the course material.
-Participation also includes consistent involvement in online interactive
-activities. These activities will occur periodically during class
-throughout the semester. This is a \textbf{required} course with
-difficult reading material and, therefore, it is crucial to establish an
-informed and critical discourse with each other over the material.
-Participation includes contributions to class discussions either in
-class or via class assignments. Participation also includes actively
-listening, as well as sharing your ideas, criticisms, and frustrations
-with course material. To ensure active participation, students must come
-to class having read and taken notes on all material. Furthermore, you
-are expected to contribute to discussions either in class or via class
-assignments. Grading of all work is done with the expectation that
-attendance and participation will be rewarded in the final grade. Also,
-\protect\hyperlink{covid_policy}{see ``COVID Policy'' section} above if
-you are symptomatic and an in-class student.
-
-In addition to completing all of the assigned reading before each
-designated day of the week (see reading schedule below and make sure you
-attend class for the ongoing reading deadlines), you must critically
-reflect on what is interesting/troubling/useful about what you have
-read. You are expected to do this work on your own. Be prepared to offer
-your questions, insights, and critique either via communication with me,
-writing assignments and/or in conversation with other students.
-
-\textbf{REMEMBER! Attendance is mandatory in all sociology classes (see
-\protect\hyperlink{attendance}{Attendance Policy section} above). It is
-also crucial to doing well in this class. In the context of this class,
-attendance means COMPLETING ALL OF THE ASSIGNMENTS, QUIZZES, INDIVIDUAL
-WORK, etc.}
-
-\hypertarget{weekly-perusall-participation-10-of-final-grade}{%
-\subsection{Weekly Perusall Participation (10\% of Final
-Grade)}\label{weekly-perusall-participation-10-of-final-grade}}
-
-For reading the primary texts (and not the textbook) we will use
-\href{https://support.perusall.com/hc/en-us}{Perusall}, a social
-annotation tool that allows students and their instructors to
-collaboratively markup .pdf documents. Instead of only reading a
-document and discussing it, Perusall brings discussion to text.
-
-To start, register for a free Perusall account and enter the course
-code: {[}Insert Code Here{]}
-
-At the beginning of the semester, you will be assigned to groups in
-Perusall, each comprised of around 10-12 students. After week 2, you
-will be randomly placed into these groups and participate in
-asynchronous group reading and discussion, covering any major theme(s)s
-or issue(s) from the reading and lecture. You will each read and discuss
-within your group forum. This means that you must not only do the
-reading and annotate on your own, but you must ask and respond to one or
-more questions within your group that are related to that week's
-readings assignment(s) and lecture. Thus, you must interact in your
-group forum with at least two (2) of your groupmate's posts. Your
-contribution and annotations will be graded on a scale of 1 -- 3, with
-higher scores indicating higher quality annotations and responses.
-\textbf{Your annotations and responses to two or more groupmate's
-annotations and questions are due on Friday by 8:00 PM. Discussion posts
-and annotations will be given credit only if they are substantive and
-follow all instructions.}
-
-For reading assignments in Perusall, you will be evaluated based on the
-following four criteria:
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  Quality: The more thoughtful the responses, the higher the score.
-\item
-  Quantity: Each student must submit at least seven (7) annotations in
-  each reading document.
-\item
-  Timeliness: You must complete the reading assignment by Friday 11:30
-  p.m.
-\item
-  Distribution: Are annotations made throughout the document? If most
-  annotations are made in a single area, it indicates the student did
-  not engage with the entire document. If annotations are distributed
-  throughout the entire document, it indicates the student did engage
-  with the reading in entirety.
-\item
-  Asking/Answering Questions: Ask and respond to each other's comments
-  and questions in their group forums.
-\end{enumerate}
-
-\textbf{Common Question: What if I don't have any questions or
-comments?} Elaborate on a specific topic, connect to personal experience
-or perspective, extension to another topic or perspective, paraphrase
-part of the text.
-
-\hypertarget{quizzes}{%
-\subsection{Quizzes (20\% of Final Grade; 4\% each)}\label{quizzes}}
-
-Five (5) quizzes are required in this class. The first quiz will be a
-syllabus quiz and will cover course policies and requirements. The
-syllabus quiz will be posted on Canvas by the end of the first class and
-must be completed by \textbf{11:59 p.m. on Friday September 2nd}. The
-other four quizzes will cover theories, ideas, and concepts from the
-course readings and lectures. \textbf{These four required reading
-quizzes will be posted electronically on Thursday at 4:00 p.m. and must
-be completed by 11:59 p.m. on Friday.} Each quiz will contain several
-multiple choice questions based on course readings and lecture material.
-These quizzes are designed to help you absorb the course readings and
-lectures, and to provide you with the opportunity to assess your mastery
-of the theories we are covering in the course.
-
-\textbf{Important Note: Please keep in mind that your lowest quiz score
-will not be counted when computing final grades. Instead, your highest
-quiz score will be counted twice in replacement of your lowest quiz
-score. All quizzes will be posted on Canvas and you will be provided
-advanced notice.}
-
 \hypertarget{writing_assignments}{%
-\subsection{Four (4) Analytical Response Papers (60\% of Final Grade;
-15\% each)}\label{writing_assignments}}
+\subsection{Four (4) Analytical Response Papers (40\% of Final Grade;
+10\% each)}\label{writing_assignments}}
 
 Four papers will be assigned for the semester. The required response
 papers will answer either one or two questions posed by the professor
@@ -663,11 +541,33 @@ Tuesday, Dec.~13 \\
 \hypertarget{guidelines-for-papers}{%
 \subsubsection{Guidelines for papers}\label{guidelines-for-papers}}
 
-Papers have a word limit, approximately 1000 words (roughly 4
+Papers have a word limit, approximately between 800 to 1000 (roughly 4
 double-spaced pages); must be typed with 12-point font, 1-inch margins,
 and Times New Roman font (11-point Arial font is also appropriate).
-Proper grammar and APA citation of sources is expected. \textbf{No other
-format will be accepted.}
+
+Please also follow these document design conventions:
+
+\begin{itemize}
+\tightlist
+\item
+  Your name, course number, and paper's title at the top of the first
+  page. This information does not count toward the word count.\\
+\item
+  You do not need a separate title page or a running head.
+\item
+  Page numbers on all pages.
+\item
+  APA-style in-text citations and references list in APA format.
+  Citations do not count toward paper length requirements.
+\item
+  Proofread as appropriate for the document's stage in the writing
+  process. All final versions must be proofread for mechanical errors
+  (spelling, grammar, punctuation). All papers in this course must
+  follow conventions of written academic English.
+\item
+  All assignments must be submitted via Canvas. Papers will be accepted
+  in .doc, .docx, .rtf, and .pdf formats.
+\end{itemize}
 
 \hypertarget{tips-and-tricks-for-good-writing}{%
 \subsubsection{Tips and tricks for good
@@ -687,6 +587,128 @@ have some distance from your writing and then revise.
 
 Prompt yourself with questions that have short, concrete answers.
 
+\hypertarget{quizzes}{%
+\subsection{Quizzes (30\% of Final Grade; 6\% each)}\label{quizzes}}
+
+Five (5) quizzes are required in this class. The first quiz will be a
+syllabus quiz and will cover course policies and requirements. The
+syllabus quiz will be posted on Canvas by the end of the first class and
+must be completed by \textbf{11:59 p.m. on Friday September 2nd}. The
+other four quizzes will cover theories, ideas, and concepts from the
+course readings and lectures. \textbf{These four required reading
+quizzes will be posted electronically after Thursday's class and must be
+completed by 11:59 p.m. on the following Friday.} Each quiz will contain
+several multiple choice questions based on course readings and lecture
+material. These quizzes are designed to help you absorb the course
+readings and lectures, and to provide you with the opportunity to assess
+your mastery of the theories we are covering in the course.
+\textbackslash textcolor\{ForestGreen\{Quizzes are open book and open
+notes.
+
+\textbf{Important Note: Please keep in mind that your lowest quiz score
+will not be counted when computing final grades. Instead, your highest
+quiz score will be counted twice in replacement of your lowest quiz
+score. All quizzes will be posted on Canvas and you will be provided
+advanced notice.}
+
+\hypertarget{weekly-perusall-participation-15-of-final-grade}{%
+\subsection{Weekly Perusall Participation (15\% of Final
+Grade)}\label{weekly-perusall-participation-15-of-final-grade}}
+
+For reading the primary texts (and not the textbook) we will use
+\href{https://support.perusall.com/hc/en-us}{Perusall}, a social
+annotation tool that allows students and their instructors to
+collaboratively markup .pdf documents. Instead of only reading a
+document and discussing it, Perusall brings discussion to text.
+
+To start, register for a free Perusall account and enter the course
+code: {[}Insert Code Here{]}
+
+At the beginning of the semester, you will be assigned to groups in
+Perusall, each comprised of around 10-12 students. After week 2, you
+will be randomly placed into these groups and participate in
+asynchronous group reading and discussion, covering any major theme(s)s
+or issue(s) from the reading and lecture. You will each read and discuss
+within your group forum. This means that you must not only do the
+reading and annotate on your own, but you must ask and respond to one or
+more questions within your group that are related to that week's
+readings assignment(s) and lecture. Thus, you must interact in your
+group forum with at least two (2) of your groupmate's posts. Your
+contribution and annotations will be graded on a scale of 1 -- 3, with
+higher scores indicating higher quality annotations and responses.
+\textbf{Your annotations and responses to two or more groupmate's
+annotations and questions are due each Thursday by 11:59 PM. Discussion
+posts and annotations will be given credit only if they are substantive
+and follow all instructions below.}
+
+For reading assignments in Perusall, you will be evaluated based on the
+following four criteria:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Quality: The more thoughtful the responses, the higher the score.
+\item
+  Quantity: Each student must submit at least seven (7) annotations in
+  each reading document.
+\item
+  Timeliness: You must complete the reading assignment \textbf{each
+  Thursday by 11:59 p.m.}
+\item
+  Distribution: Are annotations made throughout the document? If most
+  annotations are made in a single area, it indicates the student did
+  not engage with the entire document. If annotations are distributed
+  throughout the entire document, it indicates the student did engage
+  with the reading in entirety.
+\item
+  Asking/Answering Questions: Ask and respond to each other's comments
+  and questions in their group forums.
+\end{enumerate}
+
+\textbf{Common Question: What if I don't have any questions or
+comments?} Elaborate on a specific topic, connect to personal experience
+or perspective, extension to another topic or perspective, paraphrase
+part of the text.
+
+\hypertarget{attendance-and-class-participation-15-of-final-grade}{%
+\subsection{Attendance and Class Participation (15\% of Final
+Grade)}\label{attendance-and-class-participation-15-of-final-grade}}
+
+The format of this course is an interactive, ``live'' hybrid lecture and
+discussion with the objective of collaborative learning and analysis.
+Participation in class discussion is necessary for your development as a
+critical scholar and for your understanding of the course material.
+Participation also includes consistent involvement in online interactive
+activities. These activities will occur periodically during class
+throughout the semester. This is a \textbf{required} course with
+difficult reading material and, therefore, it is crucial to establish an
+informed and critical discourse with each other over the material.
+Participation includes contributions to class discussions either in
+class or via class assignments. Participation also includes actively
+listening, as well as sharing your ideas, criticisms, and frustrations
+with course material. To ensure active participation, students must come
+to class having read and taken notes on all material. Furthermore, you
+are expected to contribute to discussions either in class or via class
+assignments. Grading of all work is done with the expectation that
+attendance and participation will be rewarded in the final grade. Also,
+\protect\hyperlink{covid_policy}{see ``COVID Policy'' section} above if
+you are symptomatic and an in-class student.
+
+In addition to completing all of the assigned reading before each
+designated day of the week (see reading schedule below and make sure you
+attend class for the ongoing reading deadlines), you must critically
+reflect on what is interesting/troubling/useful about what you have
+read. You are expected to do this work on your own. Be prepared to offer
+your questions, insights, and critique either via communication with me,
+writing assignments and/or in conversation with other students.
+
+\textbf{REMEMBER! Attendance is mandatory in all sociology classes (see
+\protect\hyperlink{attendance}{Attendance Policy section} above). It is
+also crucial to doing well in this class. In the context of this class,
+attendance means COMPLETING ALL OF THE ASSIGNMENTS, QUIZZES, INDIVIDUAL
+WORK, etc.}
+
 \hypertarget{extra-credit-film-reviews-analyses-maximum-of-10-points5-points-per-analysis}{%
 \subsection{Extra-Credit (Film Reviews \& Analyses) {[}Maximum of 10
 Points/5 Points Per
@@ -700,9 +722,10 @@ critical sociological review and analysis using one or more of the
 theories or theorists covered in the course. A list of suggested films/
 documentaries will be posted on Canvas by the end of the third week of
 classes along with the guidelines for this assignment. \textbf{These
-extra credit critiques should be concise and well-organized and argued;
-the film analyses can be submitted at any time during the semester, but
-no later than Friday December 9 by 11:59 p.m.}
+extra credit critiques should be concise, have a substantive connection
+to the course material, and be well-organized and argued; the film
+analyses can be submitted at any time during the semester, but no later
+than Friday December 9 by 11:59 p.m.}
 
 \hypertarget{late-work-and-student-emergencies}{%
 \subsection{Late Work and Student
@@ -742,14 +765,24 @@ and seek help whenever you need it. However, it is primarily your
 responsibility to seek help when you need it. Use the following methods
 to get in touch and/or ask questions.
 
+\hypertarget{office-hours}{%
+\subsection{Office Hours}\label{office-hours}}
+
+I offer several ways for students to speak with me via Zoom: Wednesday
+3:30-4:30 pm office hours These open office hours are first come, first
+served, so you may need to wait in the Zoom waiting room if I am
+speaking with other students. Need a conversation starter? Ask me about
+tea, baking cookies, running, quidditch, yoga, gaming, or chocolate. For
+other times, email me to schedule an appointment
+
 \hypertarget{communication-policy}{%
 \subsection{Communication policy}\label{communication-policy}}
 
 When contacting your about the course, please send message through
-``Message Your Professor'' in Canvas. I check messages three times per
-day, Monday thru Friday, between 9:00 AM and 6:00 PM. Please allow up to
-24-48 hours for a response during the week. If you contact on the
-weekend, expect a reply the following Monday.
+``Inbox'' in Canvas. I check messages three times per day, Monday thru
+Friday, between 9:00 AM and 6:00 PM. Please allow up to 24-48 hours for
+a response during the week. If you contact on the weekend, expect a
+reply the following Monday.
 
 \begin{itemize}
 \item
@@ -768,6 +801,12 @@ weekend, expect a reply the following Monday.
     Third, if you still find it difficult, find some time to chat with
     me during office hours
   \end{enumerate}
+\item
+  Office Hours
+
+  \begin{quote}
+  Please see the above
+  \end{quote}
 \item
   Requesting a 1-on-1, non-office-hour Zoom meeting:
 
@@ -950,11 +989,56 @@ understanding of everyone in this class. We all have a responsibility
 not to be offensive to each other, or to participate in, or condone
 harassment or discrimination of any kind.
 
+\hypertarget{active-duty-military-and-veterans-statement}{%
+\subsection{Active Duty Military and Veterans
+Statement}\label{active-duty-military-and-veterans-statement}}
+
+If you are a veteran, on active duty, in the reserves, or a spouse or
+dependent, and an aspect of your present or prior service makes it
+difficult for you to fulfill the requirements of the course, keep me
+informed about your situation and I will work with you. I realize that
+you have little to no control over prompt benefits processing, VA
+appointments, training schedules, deployments, and other aspects of
+service. Campus resources for veterans, service members, and families
+are located in the
+\href{https://www.csuchico.edu/vets/index.shtml}{Veterans Education and
+Transition Services (VETS) Office} in room 330 in the Student Services
+Center (SSC) and is open Mon-Fri from 8:00AM to 4:45PM. The VETS Office
+can be reached at (530) 898-5911 or
+\href{mailto:VETS@csuchico.edu}{\nolinkurl{VETS@csuchico.edu}}.
+
+\hypertarget{students-with-children}{%
+\subsection{Students with children}\label{students-with-children}}
+
+I understand that some students have children, and that your
+responsibilities as a parent or caregiver are your top priority. While I
+expect that you will make every effort to arrange suitable child care, I
+also know that sometimes unexpected situations arise, and that child
+care may be especially difficult to arrange right now. Therefore, I have
+adopted the following policies:
+
+\begin{itemize}
+\item
+  You are welcome to bring your child to my class as needed.
+\item
+  You are welcome to feed your child in my class, including
+  breastfeeding.
+\item
+  If you bring your child to class, please provide quiet entertainment
+  for them.
+\item
+  Please feel free to step out of class as needed to care for your
+  child.
+\item
+  If you are struggling to manage your family and academic
+  responsibilities, please meet with me so I can help.
+\end{itemize}
+
 \hypertarget{mental-health}{%
 \subsection{Mental health}\label{mental-health}}
 
 Being a university student is stressful and can negatively impact mental
-health. The \href{https://www.csuchico.edu/counseling/}{WildCat
+health. The \href{https://www.csuchico.edu/counseling/}{WellCat
 Counseling Center} offers free counseling services to regularly enrolled
 students at California State University, Chico. There are a wide variety
 of reasons students seek counseling:
@@ -1218,11 +1302,32 @@ challenge other works we have read thus far? Answering these questions
 on your own will better prepare you for quizzes and writing assignments.
 
 \hypertarget{course-schedule}{%
-\section{COURSE SCHEDULE}\label{course-schedule}}
+\section{\texorpdfstring{COURSE SCHEDULE
+\textbf{\colorbox{LimeGreen}{Syllabus last updated on August 08, 2022}}}{COURSE SCHEDULE }}\label{course-schedule}}
 
 \hypertarget{week-01-0823---0825-introduction-and-overview-of-course}{%
 \subsection{WEEK 01, 08/23 - 08/25: Introduction and Overview of
 Course}\label{week-01-0823---0825-introduction-and-overview-of-course}}
+
+\textbf{Optional Reading:}
+
+\begin{itemize}
+\tightlist
+\item
+  Dillon M (2020). \emph{Introduction to Sociological Theory: Theorists,
+  Concepts, and their Applicabilityto the Twenty-First Century}, 3
+  edition. Wiley-Blackwell, Hoboken, NJ. ISBN 978-1-119-41091-1.
+  \textcolor{BrickRed}{\bf{[Read: Chapter 1,2,3]}}
+\end{itemize}
+
+\textbf{Assignment Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Complete Discussion Board Activity \emph{Favorite Study Space} by
+  \textbf{Sunday August 28, by 11:59 p.m.}
+\end{itemize}
 
 \bigbreak
 \hrule
@@ -1251,6 +1356,8 @@ I}\label{week-02-0830---0901-structural-functionalist-theories-i}}
 \tightlist
 \item
   Weekly Perusall Participation
+\item
+  \textbf{Complete Syllabus Quiz by Friday September 2, by 11:59 p.m.}
 \end{itemize}
 
 \bigbreak
@@ -1535,16 +1642,11 @@ I}\label{week-12-1108---1110-theories-of-race-ethnicity-i}}
 \item
   Feagin J, Elias S (2013). ``Rethinking Racial Formation Theory: A
   Systemic Racism Critique.'' \emph{Ethnic and Racial Studies},
-  \emph{36}(6), 931-960. doi: 10.1080/01419870.2012.669839 (URL:
-  \url{https://doi.org/10.1080/01419870.2012.669839}).
-  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+  \emph{36}(6), 931-960. \colorbox{Goldenrod}{\bf{[E-Posting]}}
 \item
   Winant H (2000). ``Race and Race Theory.'' \emph{Annual Review of
-  Sociology}, \emph{26}(1), 169-185. ISSN 0360-0572, 1545-2115, doi:
-  10.1146/annurev.soc.26.1.169 (URL:
-  \url{https://doi.org/10.1146/annurev.soc.26.1.169}), \textless URL:
-  \url{https://www.annualreviews.org/doi/10.1146/annurev.soc.26.1.169}\textgreater.
-  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+  Sociology}, \emph{26}(1), 169-185. \textless URL:
+  2022-07-29\textgreater. \colorbox{Goldenrod}{\bf{[E-Posting]}}
 \end{itemize}
 
 \textbf{Assignments Due:}
@@ -1568,18 +1670,11 @@ II}\label{week-13-1115---1117-theories-of-race-ethnicity-ii}}
 \item
   Lee J, Bean FD (2004). ``America's Changing Color Lines: Immigration,
   Race/Ethnicity, and Multiracial Identification.'' \emph{Annual Review
-  of Sociology}, \emph{30}(1), 221-242. ISSN 0360-0572, 1545-2115, doi:
-  10.1146/annurev.soc.30.012703.110519 (URL:
-  \url{https://doi.org/10.1146/annurev.soc.30.012703.110519}),
-  \textless URL:
-  \url{https://www.annualreviews.org/doi/10.1146/annurev.soc.30.012703.110519}\textgreater.
-  \colorbox{Goldenrod}{\bf{[E-Posting]}}
+  of Sociology}, \emph{30}(1), 221-242. \textless URL:
+  2022-07-29\textgreater. \colorbox{Goldenrod}{\bf{[E-Posting]}}
 \item
   Wilson WJ (2011). ``The Declining Significance of Race: Revisited \&
-  Revised.'' \emph{Daedalus}, \emph{140}(2), 55-69. ISSN 0011-5266, doi:
-  10.1162/DAED\_a\_00077 (URL:
-  \url{https://doi.org/10.1162/DAED_a_00077}), \textless URL:
-  \url{https://doi.org/10.1162/DAED_a_00077}\textgreater.
+  Revised.'' \emph{Daedalus}, \emph{140}(2), 55-69.
   \colorbox{Goldenrod}{\bf{[E-Posting]}}
 \item
   Bonilla-Silva E (2022). ``Color-Blind Racism in Pandemic Times.''
@@ -1716,8 +1811,6 @@ AND
   to two (2) of your lowest-scored papers. \textbf{These must be turned
   in by Tuesday December 13 11:59 p.m. in Canvas.}
 \end{itemize}
-
-\textbf{\colorbox{LimeGreen}{Syllabus last updated on August 05, 2022}}
 
 
 
