--- a/Syllabus/soci375_syllabus.tex
+++ b/Syllabus/soci375_syllabus.tex
@@ -107,15 +107,6 @@
 %	\thispagestyle{empty}
 \textbf{\underline{Instructor}}
 \begin{multicols}{2}
-
-  \textbf{Dr.~Martín Jacinto}\\
-  Email: \href{mailto:mjacinto@csuchico.edu}{\nolinkurl{mjacinto@csuchico.edu}}\\
-  Preferred contact: Canvas Messaging\\
-  Office Hours: 10:00 a.m. - 12:00 p.m. Tue\\
-  Office: TBD\\
-  Correspondence policy: Respond within 24-48 hours\\
-    \columnbreak
-    
   \end{multicols}
 	
 \noindent \begin{tabular*}{\textwidth}{ @{\extracolsep{\fill}} lr @{\extracolsep{\fill}}}
@@ -274,7 +265,7 @@ Objectives:}\label{sociology-program-student-learning-objectives}}
 \begin{itemize}
 \tightlist
 \item
-  Sept.~2nd - Last day to drop without instructor's approval\\
+  Sept.~2nd - Last day to drop without professor's approval\\
 \item
   Oct.~24th - Last day to drop and receive financial credit for refund\\
 \item
@@ -320,6 +311,8 @@ considered ``absent'' and may be dropped from the class for ``excessive
 absence.'' Students are responsible for officially dropping the class or
 they will receive a letter grade based on their performance.
 
+These are two reasons that a student may be dropped from the course:
+
 \begin{itemize}
 \item
   \textbf{No Show Drop:} You must complete a designated discussion post,
@@ -328,7 +321,7 @@ they will receive a letter grade based on their performance.
   work in the first two weeks will be dropped.
 \item
   \textbf{Excessive Absence Drop:} If more than two consecutive weeks of
-  non-participation is observed by the instructor the student may be
+  non-participation is observed by the professor the student may be
   dropped. If you do not participate in each week's participation
   activities (during class, online activities, or Perusall) and complete
   at least one quiz or practice activity, you will be considered
@@ -413,7 +406,7 @@ assignments, and studying. This means you should plan on devoting six
 hours of outside time per week to this course.
 
 \hypertarget{two-exams-30-of-final-grade-15-each}{%
-\subsection{Two Exams (30 \% of Final Grade; 15\%
+\subsection{Two Exams (30\% of Final Grade; 15\%
 each)}\label{two-exams-30-of-final-grade-15-each}}
 
 Each exam can be comprised of multiple choice, true/false, definitions,
@@ -447,11 +440,35 @@ Standard Time) on the day that it is due.}
 \hypertarget{guidelines-for-papers}{%
 \subsubsection{Guidelines for papers}\label{guidelines-for-papers}}
 
-Papers have a word limit, approximately between 1000 to 1200 words
-(roughly 4 double-spaced pages); must be typed with 12-point font,
-1-inch margins, and Times New Roman font (11-point Arial font is also
-appropriate). Proper grammar and APA citation of sources is expected.
-\textbf{No other format will be accepted.}
+Papers have a word limit, approximately 1200 words (roughly 5
+double-spaced pages); must be typed with 12-point font, 1-inch margins,
+and Times New Roman font (11-point Arial font is also appropriate).
+
+Please also follow these document design conventions:
+
+\begin{itemize}
+\tightlist
+\item
+  Your name, course number, and paper's title at the top of the first
+  page. \textbf{This information does not count toward the word count.}
+\item
+  You do not need a separate title page or a running head.
+\item
+  Page numbers on all pages.
+\item
+  APA-style in-text citations and references list in APA format.
+  \textbf{Citations do not count toward word length requirements.}
+\item
+  Proofread as appropriate for the document's stage in the writing
+  process. All final versions must be proofread for mechanical errors
+  (spelling, grammar, punctuation). All papers in this course must
+  follow conventions of written academic English.
+\item
+  All assignments must be submitted via Canvas. Papers will be accepted
+  in .doc, .docx, .rtf, and .pdf formats.
+\end{itemize}
+
+\textcolor{red}{\bf{No other format will be accepted.}}
 
 \hypertarget{tips-and-tricks-for-good-writing}{%
 \subsubsection{Tips and tricks for good
@@ -535,12 +552,12 @@ with at least two (2) of your groupmate's posts. Your contribution and
 annotations will be graded on a scale of 1 -- 3, with higher scores
 indicating higher quality annotations and responses. \textbf{Your
 annotations and responses to two or more groupmate's annotations and
-questions are due each Thursday by 11:59 p.m. Discussion posts and
+questions are due each Wednesday by 11:59 p.m. Discussion posts and
 annotations will be given credit only if they are substantive and follow
 all instructions.}
 
 For reading assignments in Perusall, you will be evaluated based on the
-following four criteria:
+following five criteria:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -551,8 +568,8 @@ following four criteria:
   Quantity: Each student must submit at least seven (7) annotations in
   each reading document.
 \item
-  Timeliness: You must complete the reading assignment by Friday 11:30
-  p.m.
+  Timeliness: You must complete the reading assignment by
+  \textbf{Wednesday 11:59 p.m.}
 \item
   Distribution: Are annotations made throughout the document? If most
   annotations are made in a single area, it indicates the student did
@@ -574,16 +591,16 @@ part of the text.
 Grade)}\label{attendance-and-participation-10-of-final-grade}}
 
 For this course, the participation grade will include various things.
-First, participation requires attendance to all Zoom lectures which will
-take place Mondays and Wednesdays 8:00 to 9:30 am. The participation
-grade will also include any in-class activities and group exercises that
-we may do during Zoom meetings or immediately after a meeting. That is,
-throughout the semester I will assign short activities---these will take
-place either during class or to be completed immediately after a lecture
-or as a discussion post---that will count toward your overall
-participation grade. Note that \textbf{Discussion Board Posts} will be a
-33\% your participation grade---we will have a number of them during the
-semester.
+First, participation requires attendance to
+\colorbox{GreenYellow}{all Zoom lectures which will take place Mondays and Wednesdays 8:00 to 9:30 am.}
+The participation grade will also include any in-class activities and
+group exercises that we may do during Zoom meetings or immediately after
+a meeting. That is, throughout the semester I will assign short
+activities---these will take place either during class or to be
+completed immediately after a lecture or as a discussion post---that
+will count toward your overall participation grade. Note that
+\textbf{Discussion Board Posts} will be a 33\% your participation
+grade---we will have a number of them during the semester.
 
 In addition to completing all of the assigned reading before each
 designated day of the week (see reading schedule below and make sure you
@@ -625,7 +642,7 @@ extra-credit work will \emph{not} be accepted in this course. However,
 there are some important exceptions to this rule. Whenever unexpected
 life challenges/emergencies or an illness interrupts your academic work,
 other measures will apply. If you are ill or face an emergency, you are
-asked to please notify the instructor immediately (via email or in
+asked to please notify the professor immediately (via Canvas email or in
 person), and provide documentation of what has occurred to justify
 making-up your work or turning it in beyond it due date. Moreover, given
 the current COVID-19 pandemic, I am aware that your situation can change
@@ -633,23 +650,23 @@ dramatically unexpectedly.
 \textbf{\textcolor{red}{If you are facing any personal, medical, financial or other challenges that impact your academic work, please inform me right away and we will work out a solution to your problem. I will do my best to accommodate your situation and allow you to complete your work at a later time if you missed a deadline.}
 \textcolor{red}{However, the longer you wait, the less likely I am to accept a late assignment. Furthermore, I reserve the right to refuse any late work thus, keeping the lines of communication open is your best bet if you fall a little behind on an assignment.}}
 
-The instructor's policy regarding late work is to give any student who
-is ill or has faced a \textbf{documented medical/personal emergency} the
-opportunity to make up his/her academic work \textbf{within one week of
+The professor's policy regarding late work is to give any student who is
+ill or has faced a \textbf{documented medical/personal emergency} the
+opportunity to make up their academic work \textbf{within one week of
 the absence.} Therefore, it is imperative that you discuss with the
-instructor any emergencies and/or problems in order to assist you in
+professor any emergencies and/or problems in order to assist you in
 completing your coursework.
-\textcolor{red}{\bf{Please also note that if you foresee being absent due to a conflict with religious observance(s), you must notify the instructor of your prospective absence during the first week of classes.}}
+\textcolor{red}{\bf{Please also note that if you foresee being absent due to a conflict with religious observance(s), you must notify the professor of your prospective absence during the first week of classes.}}
 
 If you have any questions, do not hesitate to discuss these issues with
-the instructor in person or via Canvas.
+the professor in person or via Canvas.
 
 \hypertarget{getting-help-and-communicating-with-your-professor}{%
 \section{Getting Help And Communicating With Your
 Professor}\label{getting-help-and-communicating-with-your-professor}}
 
 Remember, your professor is here to help you gain a rich understanding
-of the material. So, it is important to be connected to your instructor
+of the material. So, it is important to be connected to your professor
 and seek help whenever you need it. However, it is primarily your
 responsibility to seek help when you need it. Use the following methods
 to get in touch and/or ask questions.
@@ -658,10 +675,10 @@ to get in touch and/or ask questions.
 \subsection{Communication policy}\label{communication-policy}}
 
 When contacting your about the course, please send message through
-``Message Your Professor'' in Canvas. I check messages three times per
-day, Monday thru Friday, between 9:00 AM and 6:00 PM. Please allow up to
-24-48 hours for a response during the week. If you contact on the
-weekend, expect a reply the following Monday.
+``Inbox'' in Canvas. I check messages three times per day, Monday thru
+Friday, between 9:00 AM and 6:00 PM. Please allow up to 24-48 hours for
+a response during the week. If you contact on the weekend, expect a
+reply the following Monday.
 
 \begin{itemize}
 \item
@@ -678,8 +695,21 @@ weekend, expect a reply the following Monday.
     board).
   \item
     Third, if you still find it difficult, find some time to chat with
-    me during office hours
+    me during office hours.
   \end{enumerate}
+\item
+  Office Hours
+
+  \begin{quote}
+  These open office hours are first come, first served, so you may need
+  to wait in the Zoom waiting room if I am speaking with other students.
+  \end{quote}
+
+  \begin{quote}
+  \emph{Need a conversation starter?} Ask me about movies, music, books,
+  documentaries, or food. For other times, email me to schedule an
+  appointment
+  \end{quote}
 \item
   Requesting a 1-on-1, non-office-hour Zoom meeting:
 
@@ -862,11 +892,56 @@ understanding of everyone in this class. We all have a responsibility
 not to be offensive to each other, or to participate in, or condone
 harassment or discrimination of any kind.
 
+\hypertarget{active-duty-military-and-veterans-statement}{%
+\subsection{Active Duty Military and Veterans
+Statement}\label{active-duty-military-and-veterans-statement}}
+
+If you are a veteran, on active duty, in the reserves, or a spouse or
+dependent, and an aspect of your present or prior service makes it
+difficult for you to fulfill the requirements of the course, keep me
+informed about your situation and I will work with you. I realize that
+you have little to no control over prompt benefits processing, VA
+appointments, training schedules, deployments, and other aspects of
+service. Campus resources for veterans, service members, and families
+are located in the
+\href{https://www.csuchico.edu/vets/index.shtml}{Veterans Education and
+Transition Services (VETS) Office} in room 330 in the Student Services
+Center (SSC) and is open Mon-Fri from 8:00AM to 4:45PM. The VETS Office
+can be reached at (530) 898-5911 or
+\href{mailto:VETS@csuchico.edu}{\nolinkurl{VETS@csuchico.edu}}.
+
+\hypertarget{students-with-children}{%
+\subsection{Students with children}\label{students-with-children}}
+
+I understand that some students have children, and that your
+responsibilities as a parent or caregiver are your top priority. While I
+expect that you will make every effort to arrange suitable child care, I
+also know that sometimes unexpected situations arise, and that child
+care may be especially difficult to arrange right now. Therefore, I have
+adopted the following policies:
+
+\begin{itemize}
+\item
+  You are welcome to bring your child to my class as needed.
+\item
+  You are welcome to feed your child in my class, including
+  breastfeeding.
+\item
+  If you bring your child to class, please provide quiet entertainment
+  for them.
+\item
+  Please feel free to step out of class as needed to care for your
+  child.
+\item
+  If you are struggling to manage your family and academic
+  responsibilities, please meet with me so I can help.
+\end{itemize}
+
 \hypertarget{mental-health}{%
 \subsection{Mental health}\label{mental-health}}
 
 Being a university student is stressful and can negatively impact mental
-health. The \href{https://www.csuchico.edu/counseling/}{WildCat
+health. The \href{https://www.csuchico.edu/counseling/}{WellCat
 Counseling Center} offers free counseling services to regularly enrolled
 students at California State University, Chico. There are a wide variety
 of reasons students seek counseling:
@@ -1037,7 +1112,7 @@ Pantry}.
 This document is a roadmap for our semester. We will learn about global
 problems and globalization as a social process. Like all your classes,
 you will get out what you put into this course. Asking for help from one
-another and your instructors is important, don't be afraid to ask a
+another and your professors is important, don't be afraid to ask a
 question about something you don't know or if you want to check your
 knowledge about something you think you know. Do not wait to ask for
 help! We are all here to learn; it is not a competition.
@@ -1131,7 +1206,7 @@ and the paired presentation.
 
 \hypertarget{course-schedule}{%
 \section{\texorpdfstring{COURSE SCHEDULE
-\textbf{\colorbox{YellowGreen}{(Syllabus last updated on August 05, 2022) }}}{COURSE SCHEDULE }}\label{course-schedule}}
+\textbf{\colorbox{YellowGreen}{(Syllabus last updated on August 09, 2022) }}}{COURSE SCHEDULE }}\label{course-schedule}}
 
 \vspace{\baselineskip}
 
@@ -1400,7 +1475,8 @@ Development?}\label{week-05-0919---0921-debating-free-trade-i-comparative-advant
 \item
   Weekly Perusall Participation
 \item
-  \textbf{Critical Interpretation Essay \#1 due by Sunday 11:59 p.m.}
+  \textbf{Critical Interpretation Essay \#1 due by Sunday September 25
+  11:59 p.m.}
 \end{itemize}
 
 \bigbreak
